deployment.yaml
# apiVersion: v1
# kind: ConfigMap
# metadata:
#   name: bufe-frontend-config
# data:
#   VITE_API_URL: "https://bufeapi.jcloud.jedlik.cloud/api"
#   VITE_REVERB_HOST: "https://bufeapi-ws.jcloud.jedlik.cloud"
#   VITE_REVERB_PORT: "8080"
#   VITE_REVERB_SCHEME: "http"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vizgaremek-bufe-frontend-deployment
spec:
  selector:
    matchLabels:
      app: bufe-frontend
  template:
    metadata:
      labels:
        app: bufe-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: bufe-frontend
          image: ghcr.io/zarodolgozat-13a-bkm/zarodolgozat-bufe-frontend
          imagePullPolicy: Always

          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: bufe-frontend-cluster-ip-service
spec:
  selector:
    app: bufe-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bufe-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bufe.jcloud.jedlik.cloud
      secretName: bufe-frontend-certificate

  rules:
    - host: bufe.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bufe-frontend-cluster-ip-service
                port:
                  number: 80
---
